force-app/main/default/objects/CC_LiveAgent_NoSoportada__mdt/CC_LiveAgent_NoSoportada__mdt.object-meta.xml
<CustomObject>
    <label>Motivo No Soportada</label>
    <pluralLabel>Motivos No Soportada</pluralLabel>
</CustomObject>