force-app/main/default/objects/CC_LiveAgent_NoSoportada__mdt/fields/Idioma__c.field-meta.xml
<CustomField>
    <fullName>Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Es</fullName>
                <default>true</default>
                <label>Es</label>
            </value>
            <value>
                <fullName>Ca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>