force-app/main/default/objects/CC_LiveAgent_NoSoportada__mdt/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
                <default>true</default>
                <label>Web</label>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>